# toolong

./: CHANGELOG.md  Justfile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish.yml
src/bbugyi_toolong/: __init__.py  cli.py  core.py  scanner.py
tests/: test_cli.py  test_core.py  test_scanner.py
