[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "bbugyi-toolong"
version = "0.1.0"
description = "Keep source files small enough for humans and coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Bryan Bugyi" }]
maintainers = [{ name = "Bryan Bugyi" }]
keywords = ["line-count", "lint", "quality", "source-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/bbugyi200/toolong"
Repository = "https://github.com/bbugyi200/toolong"
Issues = "https://github.com/bbugyi200/toolong/issues"

[project.optional-dependencies]
dev = [
    "build",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
]

[project.scripts]
toolong = "bbugyi_toolong.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bbugyi_toolong"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "UP", "W"]

[tool.mypy]
files = ["src"]
mypy_path = ["src"]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-config", "--strict-markers"]

[tool.coverage.run]
source_pkgs = ["bbugyi_toolong"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
